# desktop

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
