[package]
name = "haven-desktop"
version = "0.1.0"
description = "Haven — Private, encrypted chat. Desktop client."
authors = ["Haven"]
license = "AGPL-3.0-or-later"
edition = "2021"
default-run = "haven-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
