[package]
name = "haven-desktop"
version = "0.1.0"
description = "Haven — Private, encrypted chat. Desktop client."
authors = ["Haven"]
license = "AGPL-3.0-or-later"
edition = "2021"
default-run = "haven-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-decorum = "1"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
